# CSC8508-GameTeamProject

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CSC8503.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
CSC8503/: AnimalObject.cpp  AnimalObject.h  Audio.cpp  Audio.h  CMakeLists.txt  CSC8503.vcxproj  CSC8503.vcxproj.filters  CollectableObject.cpp  CollectableObject.h  DroneObject.cpp  DroneObject.h  GameTechRenderer.cpp  GameTechRenderer.h  Main.cpp  NetworkedGame.cpp  NetworkedGame.h  Particle.cpp  Particle.h  PickaxeObject.h  PlankObject.cpp  PlankObject.h  PlayerObject.cpp  PlayerObject.h  RailObject.cpp  RailObject.h  RobotObject.cpp  RobotObject.h  SetupWorld.cpp  SoldierObject.cpp  SoldierObject.h  StoneObject.cpp  TrainCarriage.cpp  TrainCarriage.h  TrainObject.cpp  TrainObject.h  TreeObject.h  TutorialGame.cpp  TutorialGame.h  UI.cpp  UI.h  (+3 more)
CSC8503CoreClasses/: AnimationObject.cpp  CMakeLists.txt  CSC8503CoreClasses.vcxproj  CSC8503CoreClasses.vcxproj.filters  CollisionDetection.cpp  CollisionDetection.h  GameClient.cpp  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  NavigationGrid.cpp  NavigationGrid.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PlaneVolume.h  PositionConstraint.cpp  PushdownMachine.cpp  PushdownMachine.h  QuadTree.h  Ray.h  RenderObject.h  (+3 more)
PS5/: .gitmodules  CMakeLists.txt  CopyOfCMakeCache.txt
PS5/Assets/Data/: map1.txt
PS5/Assets/Meshes/: Assassin.msh  Bucket_Empty.msh  DesertRock.msh  Drone.anm  Drone.mat  Drone.msh  Female_Guard.mat  Moose.anm  Robot.mat  Robot.msh  Stone.msh  Train.msh  Train.mtl  Tree.msh
PS5/Assets/Shaders/: PerPixelBuffer.frag  PerPixelScene.frag  Reflect.vert  ReflectBuffer.frag  ReflectScene.frag  SkinningPerPixelBuffer.frag  combine.vert  processCombine.frag
PS5/Assets/Textures/: Axe_albedo.jpg.gnf  Axe_normal.png.gnf  Baseplate1_diff.png.gnf  Body_Normal.png.gnf  Body_baseColor.jpg.gnf  Carriage.png.gnf  CartEmpty_T.png.gnf  ColourPal.png.gnf  Default.png.gnf  DesertRock.png.gnf  DesertRock_n.png.gnf  Drone_diff.jpg.gnf  Material_baseColor.jpg.gnf  Material_normal.png.gnf  PC_MinityGrey_Basic_Hand_C.png.gnf  PC_MinityGrey_Basic_Helm_C.png.gnf  PC_MinityGrey_Basic_Helm_N.png.gnf  PC_MinityGrey_Basic_Shoes_C.png.gnf  PC_MinityGrey_Basic_Shoes_N.png.gnf  PC_MinityGrey_Face_C.png.gnf  PC_MinityGrey_Face_N.png.gnf  Pc_Minity_Hari01_C.png.gnf  Pc_Minity_Hari01_N.png.gnf  Planks_Diff.png.gnf  Planks_Norm.png.gnf  Rail.png.gnf  RailTurn.jpg.gnf  RailTurn_n.jpg.gnf  Rail_n.png.gnf  Robot.png.gnf  Robot_n.png.gnf  Rock.png.gnf  Rock_n.png.gnf  Station.png.gnf  Stone.png.gnf  Stone_n.png.gnf  Train.jpg.gnf  Tree.png.gnf  grass.jpg.gnf  lambert2_Base_Color.png.gnf  (+9 more)
PS5/Assets/Textures/Cubemap/: nightrender0001.png.gnf  nightrender0002.png.gnf  nightrender0003.png.gnf  nightrender0004.png.gnf  nightrender0005.png.gnf  nightrender0006.png.gnf  skyrender0001.png.gnf  skyrender0002.png.gnf  skyrender0003.png.gnf  skyrender0004.png.gnf  skyrender0005.png.gnf  skyrender0006.png.gnf
PS5/CSC8503/: AnimalObject.cpp  AnimalObject.h  AxeObject.h  BucketObject.h  CMakeLists.txt  CollectableObject.cpp  CollectableObject.h  GameTechRenderer.h  Main.cpp  NetworkedGame.cpp  NetworkedGame.h  PickaxeObject.h  PlankObject.cpp  PlayerObject.cpp  PlayerObject.h  RailObject.cpp  RailObject.h  RobotObject.cpp  RobotObject.h  RockObject.h  SetupWorld.cpp  StoneObject.cpp  StoneObject.h  TrainCarriage.cpp  TrainCarriage.h  TrainObject.cpp  TrainObject.h  TreeObject.h  TutorialGame.cpp  TutorialGame.h
PS5/CSC8503CoreClasses/: CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  CollisionVolume.h  GameObject.cpp  GameObject.h  GameWorld.h  NavigationGrid.cpp  NavigationGrid.h  Octree.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  PositionConstraint.h  RenderObject.h
PS5/NCLCoreClasses/: Camera.cpp  Controller.cpp  Controller.h  MshLoader.cpp  Vector.h
PS5/PS5Core/: AGCRenderer.cpp  PS5Controller.cpp
PS5/PS5Starter/: CMakeLists.txt  GameTechAGCRenderer.cpp  main.cpp
PS5/sce_module/: libSceFace.prx  libSceFaceTracker.prx  libSceFontGsm.prx  libSceJobManager.prx  libSceJobManager_nosubmission.prx  libScePfs.prx  libc.prx
(+145 files in other folders)
